# couchdb-locks

./: .gitignore  Gemfile  INSTALL.md  Makefile.in  README.md  configure.ac  locks.ini
spec/: bulk_api_spec.rb  doc_api_spec.rb  locks_spec.rb  spec_helper.rb
src/: Makefile.in  couch_httpd_locks.erl  couch_locks.erl
